Подготовить стенд для проверки сценария в MAX
